src/components/PageComponents/ProfilePage/MapperDetails/ProfileInfo/style.module.scss
.profileInfo {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  width: max-content;

  // Right side of avatar
  .rightSide {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: $spacing / 2;
    margin-left: $spacing;

    .title {
      margin-top: -$spacing / 4;
      margin-bottom: $spacing / 4;
    }

    .mapperName {
      position: relative;
      display: flex;
      width: 21rem;
      height: 3rem;

      font-family: 'Comfortaa Variable';
      font-weight: 800;
      font-size: 4rem;
      line-height: 75%;

      margin-left: -0.25rem;
      margin-top: 0.5rem;
    }

    .mapperName:hover {
      text-decoration: underline;
    }
  }

  .avatar:hover {
    outline: 0.15rem solid $color-text;
  }

  @media screen and (max-width: ($responsive-breakpoint / 2)) {
    width: 100%;
    flex-direction: column;
    justify-content: center;

    .rightSide {
      align-items: center;
      justify-content: center;
      margin-left: 0;

      .mapperName {
        align-items: center;
        justify-content: center;
        margin-top: $spacing;
      }
    }
  }
}

.skeleton {
  .rightSide {
    .mapperName {
      @extend %skeleton;
      width: 15rem;
      margin-left: 0;
    }
    .title {
      @extend %skeleton;
      width: 10rem;
      height: 1rem;
    }
    .addUser {
      @extend %skeleton;
      width: 14rem;
      height: 3.5rem;
    }
  }
}

